# locos

./: .gitignore  Makefile  README.md
clapdemo/: Cargo.toml
claps/: Cargo.toml
hello/: Cargo.toml
hello/src/: classes.rs  functions.rs  main.rs  test.rs
light01/: Cargo.toml
loco_app/: Cargo.toml  README.md  mod-test.sh
loco_app/config/: development.yaml  test.yaml
loco_app/scripts/: getusers-data.sh  getusers.sh  ping.sh
loco_app/src/: app.rs
myapp/src/: app.rs
myapp2/: Cargo.toml  db.sqlite
myapp_lightweight_service/: Cargo.toml  Makefile  myapp_lightweight_service-dir-layout.txt
myapp_saas_mysql/: Cargo.toml
myapp_saas_pg/: Cargo.toml  Makefile  myapp_saas_pg-dir-layout.txt  start-myapp_saas_pg.sh
myapp_saas_sqlite/: Cargo.toml  error.txt  sqlsaas_development.db
pgsaas/: Cargo.toml
restdb/: Cargo.toml
saas_pg/: Cargo.toml
scripts/: cargo-fix.sh  create-loco-by-templates.sh  create-post.sh  curl-checks.sh  dia-coversion.sh  docker-status-resources.sh  health.sh  hello.sh  install.sh  listposts.sh  listuser.sh  login.sh  ls-db.sh  post-create.sh  post-list-jq.sh  post-list.sh  release.sh  remove-target.sh  setup-pg.sh  start-pg-myapp_development.sh  start-pgdb-db-loco_app.sh  start-pgdb-db-todolist.sh  start-redis.sh  startup-resources.sh  templates.sh  watch.sh
sqlitesaas.bad/: Cargo.toml  sqlitesaas_developmen.db
sqlsaas/: Cargo.toml  Shuttle.toml  api.key  sqlsaas_development.db  sqlsaas_development.db.old
sqlsaas.warning/: Cargo.toml  sqlsaas_development.db
todolist/: Cargo.toml  todolist.db
zbxc/: Cargo.toml  Makefile
(+187 files in other folders)
